--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,17 @@ a {
 img {
     max-width: 100%;
 }
+
+/* elementos da página */
+.btn {
+    background-color: var(--color-blue);
+    border: 2px solid var(--color-blue);
+    padding: 8px 3.5rem;
+    color: var(--color-light);
+    transition: var(--transition);
+}
+
+.btn:hover {
+    background-color:transparent;
+    color: var(--color-blue);
+}
