regras do conteudo hero

--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,14 @@ img {
     background-color:transparent;
     color: var(--color-blue);
 }
+
+.hero {
+    width:100%;
+    min-height: 100vh;
+    background-image: linear-gradient(rgba(4, 9, 30, .3), rgba(4, 9, 30, .9)), url(../images/inicio.jpg);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+}
