--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,19 @@ img {
     display: flex;
     align-items: center;
 }
+
+.hero-content {
+    width: 60%;
+    padding: 5rem;
+    color: var(--color-light);
+}
+
+.hero-content h2 {
+    font-size: 7vmin;
+}
+
+.hero-content p {
+    font-weight: 600;
+    margin-bottom: 2rem;
+    line-height: 3.6rem;
+}
