--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,25 @@ img {
     margin: 4rem 0 2rem;
     color: var(--color-blue);
 }
+
+.hotel-list {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.hotel-item {
+    width: 28%;
+    margin: 3rem 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    box-shadow: 1px 1px 30px #ccc;
+    border-radius: 5px;
+    transition: var(--transition);
+}
