corrigindo erro ortográfico

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ img {
 
 .hotel-title {
     font-size: 5vmin;
-    text-aling: center;
+    text-align: center;
     margin: 4rem 0 2rem;
     color: var(--color-blue);
 }
