--- a/css/style.css
+++ b/css/style.css
@@ -102,3 +102,18 @@ img {
     border-radius: 5px;
     transition: var(--transition);
 }
+
+.hotel-item img {
+    width: 90%;
+    border-radius: 5px;
+}
+
+.hotel-item h3 {
+    margin: 2rem 0;
+    font-weight: 800;
+}
+
+.hotel-item p {
+    margin: 0 0 3rem;
+    width: 80%;
+}
